# XRR2

./: .gitignore  README.md  pyproject.toml  run.sh
dspybright/: __main__.py  main_train.py  main_train_sweep.py
experimental/dspybright/: utils.py
ezbright/: __main__.py  official.py  rerank.py  retrievers.py  utils.py
ezbright/prompts/: orig_reranker.md  v2_query_expander.md  v2_reranker.md
results/: aops__qe_results.json  aops__rr2_results.json  aops__rr_results.json  biology__qe_results.json  biology__rr2_results.json  biology__rr_results.json  earth_science__qe_results.json  earth_science__rr2_results.json  earth_science__rr_results.json  economics__qe_results.json  economics__rr2_results.json  economics__rr_results.json  leetcode__qe_results.json  leetcode__rr2_results.json  leetcode__rr_results.json  pony__qe_results.json  pony__rr2_results.json  pony__rr_results.json  psychology__qe_results.json  psychology__rr2_results.json  psychology__rr_results.json  robotics__qe_results.json  robotics__rr2_results.json  robotics__rr_results.json  stackoverflow__qe_results.json  stackoverflow__rr2_results.json  stackoverflow__rr_results.json  sustainable_living__qe_results.json  sustainable_living__rr2_results.json  sustainable_living__rr_results.json  theoremqa_questions__qe_results.json  theoremqa_questions__rr_results.json  theoremqa_theorems__qe_results.json  theoremqa_theorems__rr2_results.json  theoremqa_theorems__rr_results.json
xrr2/: __main__.py  official.py  rerank.py
xrr2/prompts/: orig_query_expander.md
